# playmasters

./: .env.example  .gitignore  README.md  adminlog.txt  architecture.md  branding.md  devlog.txt  eslint.config.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md  setup-project.sh  tmp_nextenv_admin.txt  tsconfig.base.json  tsconfig.json  workspace_setup.md
.cargo/: config.toml
.github/workflows/: ci.yml
admin-e2e/: package.json  playwright.config.ts  project.json
apps/admin/: .env.example  middleware.ts  next-env.d.ts  next.config.js  package.json  project.json  tsconfig.json
apps/admin/lib/: ddb.ts  (+8 more)
apps/desktop/: project.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/dist-web/: index.html
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: capacitor.config.ts  package.json  project.json
apps/realtime/: .env.example  jest.config.cts  project.json  tsconfig.app.json
apps/web/: .env.example  middleware.ts  next.config.js  tsconfig.json
docs/: Image-editor-architect.md  image-editor-roadmap.md
docs/admin/: content-lifecycle.md  rollback-published-bundle.md
docs/decisions/: 130-runtime-resolved-config-types.md
docs/games/: space-blasters-architect.md  space-blasters-gdd.md
docs/space-blaster/: README.md  admin-levelconfig-editor-v1.md  admin-scoreconfig-editor-v1.md  magic-constants-audit.md  publish-blocking-business-rules.md  resolved-bundle-system-checklist.md  story-142-implementation-plan.md
realtime-e2e/: jest.config.cts  project.json
static/: environment.js
(+129 files in other folders)
