[package]
name = "playmasters"
version = "0.1.0"
description = "Playmasters desktop shell"
authors = ["Playmasters"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.5.3", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
